# mavros_humantracking

./: .travis.yml  LICENSE  README.md  dependencies.rosinstall
.github/workflows/: build_test.yml
humantracking_controller/: CMakeLists.txt  package.xml
humantracking_controller/include/humantracking_controller/: humantracking_controller.h
humantracking_controller/launch/: config_file.rviz  multi_sitl_humantrack_circle.launch  sitl_humantrack_circle.launch
humantracking_controller/src/: humantracking_controller.cpp  humantracking_controller_node.cpp
mavros_humantracking/: CMakeLists.txt  package.xml
