<package>
  <name>mavros_humantracking</name>
  <version>0.0.1</version>
  <description>Image based humantracking controller for mavlink vehicles</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/humantracking</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/mavros_humantracking/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>humantracking_controller</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
